--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ body, html {
 }
 
 .bgimg {
-  background-image: url('/w3images/forestbridge.jpg');
+  background-image: url('C:\Users\odavidbanjo\OneDrive - Volt\Documents\GitHub\proj303\images\quiz app.jpg');
   height: 100%;
   background-position: center;
   background-size: cover;
