--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<style>
 		p {
-		  background-image:'img_bg_1_gradient';
+		  background-image:'img_bg_1_gradient.jpg';
 		}
 		</style>
 	
