--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<title>Document</title>
 </head>
 <body>
+<h1>Welcome to Our Site</h1>
 	<style>
 		p {
 		  background-image:'img_bg_1_gradient.jpg';
