--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <h1>Welcome to Our Site</h1>
 	<style>
 		p {
-		  background-image:'img_bg_1_gradient.jpg';
+		  background-image: url('https://www.google.com/search?q=background+imager&rlz=1C1GCEU_enUS946US947&oq=background+imager&aqs=chrome..69i57.8086j0j1&sourceid=chrome&ie=UTF-8#imgrc=rf-rFvyFBL__0M');
 		}
 		</style>
 	
