--- a/index.html
+++ b/index.html
@@ -7,12 +7,18 @@
 	<title>Document</title>
 </head>
 <body>
-<h1>Welcome to Our Site</h1>
-	<style>
-		p {
-		  background-image: url('img_girl.jpg');
-		}
-		</style>
-	
+	<div class="bgimg">
+		<div class="topleft">
+		  <p>Logo</p>
+		</div>
+		<div class="middle">
+		  <h1>COMING SOON</h1>
+		  <hr>
+		  <p>35 days</p>
+		</div>
+		<div class="bottomleft">
+		  <p>Some text</p>
+		</div>
+	  </div>
 </body>
 </html>
